# atm0s-media-sip-gateway

./: Cargo.toml  Cross.toml  Dockerfile  README.md  build.rs  deny.toml  docker-compose.yml  package.json  pnpm-lock.yaml
.devcontainer/: devcontainer.json
.github/: release.yml  rust-fmt.yml  rust.yml
.github/workflows/: release.yml  rust-clippy.yml  rust-fmt.yml  rust.yml  typos.yml
docs/: hooks.md  integration.md
protobuf/: sip_gateway.proto
src/: atm0s.ts  call_manager.rs  config.ts  error.rs  futures.rs  index.ts  lib.rs  main.rs  protocol.rs  secure.rs  server.ts  storage.ts  utils.rs  utils.ts  ws_gateway.ts
src/address_book/: mod.rs  storage.rs  sync.rs
src/call_manager/: incoming_call.rs  outgoing_call.rs
src/call_manager/incoming_call/: notify.rs
src/handlers/: invite.ts  register.ts
src/hook/: mod.rs  queue.rs  sender.rs
src/http/: api_call.rs  api_node.rs  api_token.rs  mod.rs  response_result.rs  ws_call.rs  ws_in_call.rs  ws_in_notify.rs  ws_notify.rs  ws_out_call.rs
src/protocol/: address_book.rs  http.rs  incoming.rs  notify.rs  outgoing.rs  token.rs
src/protocol/protobuf/: mod.rs  sip_gateway.rs
src/schemes/: make_call.ts  update_call.ts
src/sip/: atm0s.ts  hooks.ts  lib.ts  media.rs  mod.rs  reqs.ts  server.rs
src/sip/call/: incoming_call.ts  lib.ts  outgoing_call.ts
src/sip/media/: api.rs  rtp_answer.rs  rtp_offer.rs
src/sip/server/: incoming.rs  outgoing.rs
src/sip/server/incoming/: talking_state.rs  wait_state.rs
src/sip/server/outgoing/: calling_state.rs  canceling_state.rs  early_state.rs  talking_state.rs
